# dnscrypt-resolvers

./: .gitignore  .gitmodules  CMakeLists.txt  GeoLocation.cxx  GeoLocation.h  README.md  ResolverFlags.cxx  ResolverFlags.h  autogen.sh  decoder.cxx  filter.cxx  geolocation.txt  no_flag_phrases.txt  public-resolvers.json  relays.json
